--- a/3-course/readme
+++ b/3-course/readme
@@ -1,1 +1,10 @@
 
+- Third Course of Computer Science -
+
+Here you can find some proyects and exercices of:
+  1. Knoledge Representation
+  2. Virtual Reality
+  3. Intelligent Systems
+  4. Information Systems - Design & Development
+
+Feel free to use all the code as you want!
