--- a/3-course/Information Systems/README
+++ b/3-course/Information Systems/README
@@ -1,5 +1,5 @@
 
-- Information Systems: Design & Development -
+*** Information Systems: Design & Development ***
 
 Here you can find the final proyect of this subject, about conections with databases and
 organisation of information.
